# bd-homework

./: .gitattributes  .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: book_details.blp  book_details.rs  confirmation_dialog.rs  edit_author_details.blp  edit_author_details.rs  edit_book_details.blp  edit_book_details.rs  http.rs  librarian_view.blp  librarian_view.rs  login_page.blp  login_page.rs  main.rs  time.rs  user_view.blp  user_view.rs  widget_ext.rs  window.blp  window.rs
server/: Cargo.toml
server/.sqlx/: query-0ea8f5516ef3e191d5641f9fdaaffe6be761ceeb3a8c443478f4752ccbc981a8.json  query-1659c16da036c23a80d75ec489cc0c097ea926a672153e07a61dcfbe3774ac8a.json  query-193826f3b8ddcb10d9240021e092df6dc57156f3faa716d11dccb585655e10cf.json  query-251934ac59079457f27c61df30cb3f8532c68392e0fa8e92f1169429f4dfd610.json  query-2657fa477ee4190e2e504e30845cf3d627bd192afe76194363574599b148706c.json  query-2e45b4b8dc44ae93646207f5474d9cbf5ab027a26ce689bf925b08f2567d0d96.json  query-343f1c119d373abcbef13644dbb4e4b61bdc7c6d76775dab1ec0213ad471d306.json  query-418af3768f2808029e26776bba005a27baf3a70b529f10ad728b25e88c090d5a.json  query-4199be95b38d2b3f4be1ff15538a75f7d48553d2d574e03f7716b82e851adbaa.json  query-5042b9234888eeb28876d2ba57c96ad8a12b4f482300c7933dfc326235f9d3ce.json  query-510d0309fff8d699a1e3a6d2fedd66f1e5ba33e6a625e97e3ff76fa39e81ff10.json  query-51c49b2bf054e8f13e7a31476504c966c51fda4ec5b680cca945e079011d25df.json  query-560f5d561cc4528bd020a702a22a5ca735f0619698ac472c25119970a00a745d.json  (+19 more)
server/migrations/: 20231228213058_create-tables.sql  (+1 more)
(+11 files in other folders)
