[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
tokio = { version = "1.35.1", features = [ "full" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.0", features = [ "env-filter" ] }
schema.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "sqlite" ] }
anyhow = "1.0.77"
argon2 = { version = "0.5.2", features = [ "std" ] }
chrono = "0.4.31"
